force-app/main/default/objects/Contact/fields/Key_Strategic_Communication__c.field-meta.xml
<CustomField>
    <fullName>Key_Strategic_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the group of people HeartKids would like to post or email key information to</description>
    <inlineHelpText>Exclusive updates SLT access only</inlineHelpText>
    <label>Key Strategic Communication</label>
    <type>Checkbox</type>
</CustomField>