force-app/main/default/objects/Contact/fields/Key_Strategic_Communication_Backup__c.field-meta.xml
<CustomField>
    <fullName>Key_Strategic_Communication_Backup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Strategic Communication	 Backup</label>
    <type>Checkbox</type>
</CustomField>