force-app/main/default/objects/Contact/fields/Language_Spoken_Other_Than_English_Other__c.field-meta.xml
<CustomField>
    <fullName>Language_Spoken_Other_Than_English_Other__c</fullName>
    <label>Language Spoken Other Than English Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>