force-app/main/default/objects/Contact/fields/Lapsed_Date__c.field-meta.xml
<CustomField>
    <fullName>Lapsed_Date__c</fullName>
    <description>The date when the &quot;Recurring Donor Status&quot; was changed to &quot;Lapsed&quot;</description>
    <inlineHelpText>The date when the &quot;Recurring Donor Status&quot; was changed to &quot;Lapsed&quot;</inlineHelpText>
    <label>Lapsed Date</label>
    <type>Date</type>
</CustomField>