force-app/main/default/objects/Contact/fields/Largest_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>Largest_Gift_Date__c</fullName>
    <description>Populated via Customizable Rollup of same name</description>
    <label>Largest Gift Date</label>
    <type>Date</type>
</CustomField>