force-app/main/default/objects/Contact/fields/Last_Gift_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Type__c</fullName>
    <description>&apos;Type&apos; of most recent Opportunity hard credited to this Contact. Populated by Process Builder action.</description>
    <inlineHelpText>&apos;Type&apos; of most recent Opportunity hard credited to this Contact</inlineHelpText>
    <label>Last Gift Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>