force-app/main/default/objects/Contact/fields/Last_SHD_Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_SHD_Donation_Amount__c</fullName>
    <description>Amount of most recent Oppty associated to this Contact where Type = &apos;Sponsor Donation&apos; and Site = &apos;sweetheartday.org.au&apos;
Populated by CRLP of same name</description>
    <label>Last SHD Donation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>