force-app/main/default/objects/Contact/fields/Last_SHD_Donation_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_SHD_Donation_Campaign_Name__c</fullName>
    <description>Campaign most recent Oppty was associated to where Oppty Type = &apos;Sponsor Donation and Site = &apos;sweetheartday.org.au&apos;
Populated by CRLP of same name</description>
    <label>Last SHD Donation Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>