force-app/main/default/objects/Contact/fields/Last_SHD_Donation_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_SHD_Donation_Date__c</fullName>
    <description>Close Date of most recent Oppty associated to this Contact where Type = Sponsor Donation and Site = &apos;sweetheartday.org.au&apos;. 
Populated by CRLP of same name</description>
    <label>Last SHD Donation Date</label>
    <type>Date</type>
</CustomField>