force-app/main/default/objects/Contact/fields/Last_SHD_Donation_Year__c.field-meta.xml
<CustomField>
    <fullName>Last_SHD_Donation_Year__c</fullName>
    <formula>TEXT(YEAR( Last_SHD_Donation_Date__c ))</formula>
    <label>Last SHD Donation Year</label>
    <type>Text</type>
</CustomField>