force-app/main/default/objects/Contact/fields/Last_SHD_Fundraising_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_SHD_Fundraising_Campaign_Name__c</fullName>
    <description>Loaded manually via file Dec 2023 from report https://heartkids.lightning.force.com/lightning/r/Report/00OOb000000CPM1MAO/view?queryScope=userFolders</description>
    <label>Last SHD Fundraising Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>