force-app/main/default/objects/Contact/fields/Last_SHD_Fundraising_Total__c.field-meta.xml
<CustomField>
    <fullName>Last_SHD_Fundraising_Total__c</fullName>
    <description>Uploaded manually via file from report https://heartkids.lightning.force.com/lightning/r/Report/00OOb000000CPM1MAO/view?queryScope=userFolders</description>
    <label>Last SHD Fundraising Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>