force-app/main/default/objects/Contact/fields/Last_SHD_Fundraising_Year__c.field-meta.xml
<CustomField>
    <fullName>Last_SHD_Fundraising_Year__c</fullName>
    <description>Uploaded manually via file from report https://heartkids.lightning.force.com/lightning/r/Report/00OOb000000CPM1MAO/view?queryScope=userFolders</description>
    <label>Last SHD Fundraising Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>