force-app/main/default/objects/Contact/fields/Marketing_emails_Backup__c.field-meta.xml
<CustomField>
    <fullName>Marketing_emails_Backup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing emails Backup</label>
    <type>Checkbox</type>
</CustomField>