force-app/main/default/objects/Contact/fields/Marketing_SMS__c.field-meta.xml
<CustomField>
    <fullName>Marketing_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing SMS</label>
    <type>Checkbox</type>
</CustomField>