force-app/main/default/objects/Contact/fields/Marketing_SMS_Backup__c.field-meta.xml
<CustomField>
    <fullName>Marketing_SMS_Backup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing SMS Backup</label>
    <type>Checkbox</type>
</CustomField>