force-app/main/default/objects/Contact/fields/Media_Consent_Given__c.field-meta.xml
<CustomField>
    <fullName>Media_Consent_Given__c</fullName>
    <label>Marketing Content Consent Given</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Photos</fullName>
            </value>
            <value>
                <fullName>Full Consent Given</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>