force-app/main/default/objects/Contact/fields/Media_Contact__c.field-meta.xml
<CustomField>
    <fullName>Media_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Media Contact</label>
    <type>Checkbox</type>
</CustomField>