force-app/main/default/objects/Contact/fields/Medical_Equipment_Loan_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Medical_Equipment_Loan_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Equipment Loan Agreement</label>
    <type>Checkbox</type>
</CustomField>