force-app/main/default/objects/Contact/fields/Migrated_From_Dependent_Record__c.field-meta.xml
<CustomField>
    <fullName>Migrated_From_Dependent_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migrated From Dependent Record</label>
    <type>Checkbox</type>
</CustomField>