force-app/main/default/objects/Contact/fields/Name_Email__c.field-meta.xml
<CustomField>
    <fullName>Name_Email__c</fullName>
    <description>Created for deduping purposes</description>
    <formula>FirstName  &amp;  LastName  &amp;  Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Created for deduping purposes</inlineHelpText>
    <label>Name &amp; Email</label>
    <type>Text</type>
</CustomField>