force-app/main/default/objects/Contact/fields/No_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>No_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked if Contact has clicked &quot;Unsubscribe from our Newsletters&quot; link in an email
Contacts with this field ticked will not receive State or National newsletters</description>
    <inlineHelpText>Ticked if Contact has clicked &quot;Unsubscribe from our Newsletters&quot; link in an email
Contacts with this field ticked will not receive State or National newsletters</inlineHelpText>
    <label>No Newsletter</label>
    <type>Checkbox</type>
</CustomField>