force-app/main/default/objects/Contact/fields/No_SMS__c.field-meta.xml
<CustomField>
    <fullName>No_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No SMS</label>
    <type>Checkbox</type>
</CustomField>