force-app/main/default/objects/Contact/fields/No_SMS_Marketing__c.field-meta.xml
<CustomField>
    <fullName>No_SMS_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The contact has requested not to receive communications via SMS for any marketing material</description>
    <inlineHelpText>They do not want to receive SMS marketing material</inlineHelpText>
    <label>No SMS Marketing</label>
    <type>Checkbox</type>
</CustomField>