force-app/main/default/objects/Contact/fields/No_Telemarketing__c.field-meta.xml
<CustomField>
    <fullName>No_Telemarketing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>No donation related phone calls</inlineHelpText>
    <label>No Fundraising Calls</label>
    <type>Checkbox</type>
</CustomField>