force-app/main/default/objects/Contact/fields/Normalized_email__c.field-meta.xml
<CustomField>
    <fullName>Normalized_email__c</fullName>
    <formula>Lower(Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Normalized email</label>
    <type>Text</type>
</CustomField>