force-app/main/default/objects/Contact/fields/npo02__OppsClosed2YearsAgo__c.field-meta.xml
<CustomField>
    <fullName>npo02__OppsClosed2YearsAgo__c</fullName>
    <defaultValue>0</defaultValue>
    <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
    <inlineHelpText>Displays the total number of gifts two financial years ago for which the Contact was listed as the Opportunity Primary Contact. Populated automatically via a Customizable Rollup.</inlineHelpText>
    <label>Number of Gifts Two Years Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>