force-app/main/default/objects/Contact/fields/npo02__Soft_Credit_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>npo02__Soft_Credit_Last_Year__c</fullName>
    <inlineHelpText>Total soft credit amount last financial year.</inlineHelpText>
    <label>Soft Credit Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>