force-app/main/default/objects/Contact/fields/npsp__Number_of_Soft_Credits_This_Year__c.field-meta.xml
<CustomField>
    <fullName>npsp__Number_of_Soft_Credits_This_Year__c</fullName>
    <description>The number of soft credits attributed to this Contact this calendar year.</description>
    <inlineHelpText>The number of soft credits attributed to this Contact this financial year.</inlineHelpText>
    <label>Number of Soft Credits This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>