force-app/main/default/objects/Contact/fields/npsp__Soft_Credit_Last_N_Days__c.field-meta.xml
<CustomField>
    <fullName>npsp__Soft_Credit_Last_N_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total amount of soft credit attributed to this Contact in the last N days. The value of N is set in NPSP Settings | Donations | Donor Statistics.</description>
    <inlineHelpText>The total amount of soft credit attributed to this Contact in the last 365 days. The value of N is set in NPSP Settings | Donations | Donor Statistics.</inlineHelpText>
    <label>Soft Credit Last N Days</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>