force-app/main/default/objects/Contact/fields/Number_of_Gifts_Three_Years_Ago__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Gifts_Three_Years_Ago__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Displays the total number of gifts three financial years ago for which the Contact was listed as the Opportunity Primary Contact. Populated automatically via a Customizable Rollup.</description>
    <inlineHelpText>Displays the total number of gifts three financial years ago for which the Contact was listed as the Opportunity Primary Contact. Populated automatically via a Customizable Rollup.</inlineHelpText>
    <label>Number of Gifts Three Years Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>