force-app/main/default/objects/Contact/fields/Opt_Out_Giving_Day_Comms__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Giving_Day_Comms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>These people have opted out of Giving Day Comms only</description>
    <inlineHelpText>These people have opted out of Giving Day Comms only</inlineHelpText>
    <label>Opt Out Giving Day Comms</label>
    <type>Checkbox</type>
</CustomField>