force-app/main/default/objects/Contact/fields/Other_Reason_For_Referral__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason_For_Referral__c</fullName>
    <label>Other Reason For Referral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>