force-app/main/default/objects/Contact/fields/Other_Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Other_Referral_Source__c</fullName>
    <label>Other Referral Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>