force-app/main/default/objects/Contact/fields/Parents_Guardian_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Parents_Guardian_Contact_Number__c</fullName>
    <label>Parents/Guardian Contact Number</label>
    <type>Phone</type>
</CustomField>