force-app/main/default/objects/Contact/fields/Parents_Guardian_Email__c.field-meta.xml
<CustomField>
    <fullName>Parents_Guardian_Email__c</fullName>
    <label>Parents/Guardian Email</label>
    <type>Email</type>
</CustomField>