force-app/main/default/objects/Contact/fields/Parents_Guardian_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Parents_Guardian_First_Name__c</fullName>
    <label>Parents/Guardian First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>