force-app/main/default/objects/Contact/fields/PartnerOrganisationContact__c.field-meta.xml
<CustomField>
    <fullName>PartnerOrganisationContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Organisation Contact</label>
    <type>Checkbox</type>
</CustomField>