force-app/main/default/objects/Contact/fields/PartnerOrganisationExecutive__c.field-meta.xml
<CustomField>
    <fullName>PartnerOrganisationExecutive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Organisation Executive</label>
    <type>Checkbox</type>
</CustomField>