force-app/main/default/objects/Contact/fields/Patron__c.field-meta.xml
<CustomField>
    <fullName>Patron__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patron</label>
    <type>Checkbox</type>
</CustomField>