force-app/main/default/objects/Contact/fields/Personal_Connection_to_CHD__c.field-meta.xml
<CustomField>
    <fullName>Personal_Connection_to_CHD__c</fullName>
    <label>Personal Connection to CoHD</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Personal_Connection_to_CoHD</valueSetName>
    </valueSet>
</CustomField>