force-app/main/default/objects/Contact/fields/Police_Check__c.field-meta.xml
<CustomField>
    <fullName>Police_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Police Check</label>
    <type>Checkbox</type>
</CustomField>