force-app/main/default/objects/Contact/fields/Previous_Dependent_Record__c.field-meta.xml
<CustomField>
    <fullName>Previous_Dependent_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Dependent record that this Contact was created from when Primary Carer granted permission via Formstack form</description>
    <inlineHelpText>Lookup to Dependent record that this Contact was created from when Primary Carer granted permission via Formstack form</inlineHelpText>
    <label>Previous Dependent Record</label>
    <referenceTo>Dependents__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>