force-app/main/default/objects/Contact/fields/Primary_Support_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Primary_Support_Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Support Relationship Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>