force-app/main/default/objects/Contact/fields/Professional_Connection_to_CHD__c.field-meta.xml
<CustomField>
    <fullName>Professional_Connection_to_CHD__c</fullName>
    <label>Professional Connection to CoHD</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ambassador</fullName>
            </value>
            <value>
                <fullName>Corporate Partner/Contact</fullName>
                <label>Corporate Contact</label>
            </value>
            <value>
                <fullName>Health Professional</fullName>
                <label>Health Care Professional</label>
            </value>
            <value>
                <fullName>HKL Board Member</fullName>
            </value>
            <value>
                <fullName>Former HKL Board Member</fullName>
            </value>
            <value>
                <fullName>HKL Board Applicant</fullName>
            </value>
            <value>
                <fullName>HKL Staff</fullName>
            </value>
            <value>
                <fullName>Former HKL Staff</fullName>
            </value>
            <value>
                <fullName>Hospital Administration</fullName>
            </value>
            <value>
                <fullName>Hospital PR</fullName>
            </value>
            <value>
                <fullName>Media Contact</fullName>
            </value>
            <value>
                <fullName>Patron</fullName>
            </value>
            <value>
                <fullName>Researcher</fullName>
            </value>
            <value>
                <fullName>School Teacher/Educator</fullName>
            </value>
            <value>
                <fullName>Stakeholder</fullName>
                <label>Stakeholder Contact</label>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>HKL Director</fullName>
                <isActive>false</isActive>
                <label>HKL Director</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>