force-app/main/default/objects/Contact/fields/Rare_conditions__c.field-meta.xml
<CustomField>
    <fullName>Rare_conditions__c</fullName>
    <label>Rare conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>