force-app/main/default/objects/Contact/fields/Reason_client_did_not_give_consent__c.field-meta.xml
<CustomField>
    <fullName>Reason_client_did_not_give_consent__c</fullName>
    <label>Reason client did not give consent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>