force-app/main/default/objects/Contact/fields/Recurring_Donor_Status__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donor_Status__c</fullName>
    <description>Current status based on no. of active recurring donations</description>
    <inlineHelpText>Current status based on no. of active recurring donations</inlineHelpText>
    <label>Recurring Donor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>