force-app/main/default/objects/Contact/fields/Referral_Comment__c.field-meta.xml
<CustomField>
    <fullName>Referral_Comment__c</fullName>
    <label>Referral Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>